--- a/index.html
+++ b/index.html
@@ -1,88 +1,237 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Philo van Kemenade</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
-  <script src="/js/feather.min.js"></script>
-</head>
-<body class="sans-serif dark-gray bg-washed-green">
-  <div class="pa3 pa4-m pa6-l pb4-l">
-    <header class="f7">
-      <nav class="f6">
-        <a class="link dim dark-green dib mr3 mb3" href="/" title="home">
-          <i class="v-mid" data-feather="home"></i> <span class="v-mid">home</span>
+  <head>
+    <title>Philo van Kemenade</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"
+    />
+    <script src="/js/feather.min.js"></script>
+  </head>
+  <body class="sans-serif dark-gray bg-washed-green">
+    <div class="pa3 pa4-m pa6-l pb4-l">
+      <header class="f7">
+        <nav class="f6">
+          <a class="link dim dark-green dib mr3 mb3" href="/" title="home">
+            <i class="v-mid" data-feather="home"></i>
+            <span class="v-mid">home</span>
+          </a>
+          <a class="link dim dark-green dib mr3 mb3" href="/now" title="home">
+            <i class="v-mid" data-feather="sun"></i>
+            <span class="v-mid">now</span>
+          </a>
+        </nav>
+      </header>
+      <main class="dark-gray">
+        <div class="fw7 lh-title mt5">
+          <h1 class="f1 f-headline-ns">hi! 👋 <br />My name is Philo.</h1>
+
+          <p class="f2 measure">
+            I create tools, stories and things in between to amplify human
+            connection with arts and culture.
+          </p>
+          <p class="f4 measure">
+            I enjoy working with cultural organisations to create engaging
+            visitor experiences, often making use of digital collections,
+            storytelling, AI and interaction design.
+          </p>
+          <p class="f4 measure">
+            From my background in Cognitive Science & Artificial Intelligence I
+            have a particular interest in theories of mind that understand
+            consciousness as something Embodied, Enactive, Extended and
+            Embedded.
+          </p>
+        </div>
+        <p>
+          <a class="link dark-green hover-green underline i" href="./now"
+            >What I am doing /now</a
+          >.
+        </p>
+        <div class="measure">
+          <p>
+            At the
+            <a
+              class="link dark-green hover-green underline fw6"
+              target="_blank"
+              href="https://beeldengeluid.nl/en/"
+              >Netherlands Institute for Sound and Vision</a
+            >
+            I work on
+            <strong
+              >innovative user interfaces for audiovisual collections</strong
+            >. In the scope of the MediaScape project, I currently investigate
+            the efficacy of ‘generous interfaces’ in the AV archiving field. In
+            the project I combines interaction design with data visualisation to
+            develop a
+            <a
+              class="link dark-green hover-green underline fw6"
+              target="_blank"
+              href="https://mediascape.now.sh/"
+              >series of interface concepts</a
+            >
+            that reveal the scale and complexity of AV collections.
+          </p>
+          <p>
+            I run
+            <a
+              class="link dark-green hover-green underline fw6"
+              target="_blank"
+              href="https://twitter.com/storyunite"
+              >Storytellers United</a
+            >, a
+            <strong>welcoming community of innovative storytellers</strong>,
+            spread across many disciplines and time zones. We organise an
+            international series of storytelling hack jams to bring together
+            media makers, web developers and designers to prototype stories that
+            can only be told on the web.
+            <br />
+            <strong
+              >You should
+              <a
+                class="link dark-green hover-green underline fw6"
+                target="_blank"
+                href="http://storytellers.link"
+                >join us on Slack</a
+              ></strong
+            >.
+          </p>
+          <p>
+            I co-founded the design studio
+            <a
+              class="link dark-green hover-green underline fw6"
+              target="_blank"
+              href="https://www.behance.net/unfoldcollective"
+              >Unfold Collective</a
+            >
+            to explore the potential for
+            <strong
+              >sense making on the intersection of digital and physical
+              media</strong
+            >. We helped cultural organisations and brands to tell stories in
+            experiential ways.
+          </p>
+          <p>
+            I co-founded
+            <a
+              class="link dark-green hover-green underline fw6"
+              target="_blank"
+              href="https://sensorium.is/"
+              >Sensorium Festival</a
+            >, celebrating
+            <strong>humane applications of creative technology</strong> in art,
+            design and performance.
+          </p>
+          <p>
+            Between 2016 and 2019 I worked at the R&D team of the Slovak
+            National Gallery on
+            <strong>web technology to connect people to art</strong>. Projects
+            that I'm particularly proud of include the online collections
+            platform
+            <a
+              class="link dark-green hover-green underline fw6"
+              target="_blank"
+              href="https://webumenia.sk/en"
+              >Web umenia</a
+            >, a
+            <a
+              class="link dark-green hover-green underline fw6"
+              target="_blank"
+              href="http://senxskutocnost.sng.sk/en"
+              >long-form story</a
+            >
+            about a controversial part of Slovak history and a
+            <a
+              class="link dark-green hover-green underline fw6"
+              target="_blank"
+              href="https://fillafulla.sng.sk/?lang=en#"
+              >conversational interface</a
+            >
+            that brings two iconic Czechoslovak painters back to life in chat
+            bot form. You can find all our work on
+            <a
+              class="link dark-green hover-green underline fw6"
+              target="_blank"
+              href="https://github.com/SlovakNationalGallery/"
+              >GitHub</a
+            >.
+          </p>
+        </div>
+      </main>
+      <footer class="pt5 f7">
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://twitter.com/phivk"
+          title="twitter"
+        >
+          <i class="v-mid" data-feather="twitter"></i>
+          <span class="v-mid">twitter</span>
         </a>
-        <a class="link dim dark-green dib mr3 mb3" href="/now" title="home">
-          <i class="v-mid" data-feather="sun"></i> <span class="v-mid">now</span>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://github.com/phivk/"
+          title="github"
+        >
+          <i class="v-mid" data-feather="github"></i>
+          <span class="v-mid">github</span>
         </a>
-      </nav>
-    </header>
-    <main class="dark-gray">
-      <div class="fw7 lh-title mt5">
-        
-        <h1 class="f1 f-headline-ns">hi! 👋 <br>My name is Philo.</h1>
-        
-        <p class="f2 measure">
-          I create tools, stories and things in between to amplify human connection with arts and culture.
-        </p>
-        <p class="f4 measure">
-          I enjoy working with cultural organisations to create engaging visitor experiences, often making use of digital collections, storytelling, AI and interaction design.
-        </p>
-        <p class="f4 measure">
-          From my background in Cognitive Science & Artificial Intelligence I have a particular interest in theories of mind that understand consciousness as something Embodied, Enactive, Extended and Embedded.
-        </p>
-      </div>
-      <p><a class="link dark-green hover-green underline i" href="./now">What I am doing /now</a>.</p>
-      <div class="measure">
-        <p>
-          At the <a class="link dark-green hover-green underline fw6" target="_blank" href="https://beeldengeluid.nl/en/">Netherlands Institute for Sound and Vision</a> I work on <strong>innovative user interfaces for audiovisual collections</strong>. In the scope of the MediaScape project, I currently investigate the efficacy of ‘generous interfaces’ in the AV archiving field. In the project I combines interaction design with data visualisation to develop a <a class="link dark-green hover-green underline fw6" target="_blank" href="https://mediascape.now.sh/">series of interface concepts</a> that reveal the scale and complexity of AV collections.
-        </p>
-        <p>
-          I run <a class="link dark-green hover-green underline fw6" target="_blank" href="https://twitter.com/storyunite">Storytellers United</a>, a <strong>welcoming community of innovative storytellers</strong>, spread across many disciplines and time zones. We organise an international series of storytelling hack jams to bring together media makers, web developers and designers to prototype stories that can only be told on the web. 
-          <br>
-          <strong>You should <a class="link dark-green hover-green underline fw6" target="_blank" href="http://storytellers.link">join us on Slack</a></strong>.
-        </p>
-        <p>
-          I co-founded the design studio <a class="link dark-green hover-green underline fw6" target="_blank" href="https://www.behance.net/unfoldcollective">Unfold Collective</a> to explore the potential for <strong>sense making on the intersection of digital and physical media</strong>. We helped cultural organisations and brands to tell stories in experiential ways.
-        </p>
-        <p>
-          I co-founded <a class="link dark-green hover-green underline fw6" target="_blank" href="https://sensorium.is/">Sensorium Festival</a>, celebrating <strong>humane applications of creative technology</strong> in art, design and performance.
-        </p>
-        <p>
-          Between 2016 and 2019 I worked at the R&D team of the Slovak National Gallery on <strong>web technology to connect people to art</strong>. Projects that I'm particularly proud of include the online collections platform <a class="link dark-green hover-green underline fw6" target="_blank" href="https://webumenia.sk/en">Web umenia</a>, a <a class="link dark-green hover-green underline fw6" target="_blank" href="http://senxskutocnost.sng.sk/en">long-form story</a> about a controversial part of Slovak history and a <a class="link dark-green hover-green underline fw6" target="_blank" href="https://fillafulla.sng.sk/?lang=en#">conversational interface</a> that brings two iconic Czechoslovak painters back to life in chat bot form.
-          You can find all our work on <a class="link dark-green hover-green underline fw6" target="_blank" href="https://github.com/SlovakNationalGallery/">GitHub</a>.
-        </p>
-      </div>
-    </main>
-    <footer class="pt5 f7">
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://twitter.com/phivk" title="twitter">
-        <i class="v-mid" data-feather="twitter"></i> <span class="v-mid">twitter</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://github.com/phivk/" title="github">
-        <i class="v-mid" data-feather="github"></i> <span class="v-mid">github</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://medium.com/@phivk" title="medium">
-        <i class="v-mid" data-feather="edit"></i> <span class="v-mid">medium</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://slides.com/phivk/" title="slides">
-        <i class="v-mid" data-feather="image"></i> <span class="v-mid">slides</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="http://are.na/philo-van-kemenade/" title="are.na">
-        <i class="v-mid" data-feather="bookmark"></i> <span class="v-mid">are.na</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://vimeo.com/phivk" title="vimeo">
-        <i class="v-mid" data-feather="youtube"></i> <span class="v-mid">vimeo</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://www.linkedin.com/in/philovk/" title="linkedin">
-        <i class="v-mid" data-feather="linkedin"></i> <span class="v-mid">linkedin</span>
-      </a>
-    </footer>
-  </div>
-  
-  <script>
-    feather.replace()
-  </script>
-  <script data-goatcounter="https://phivk.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
-</body>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://medium.com/@phivk"
+          title="medium"
+        >
+          <i class="v-mid" data-feather="edit"></i>
+          <span class="v-mid">medium</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://slides.com/phivk/"
+          title="slides"
+        >
+          <i class="v-mid" data-feather="image"></i>
+          <span class="v-mid">slides</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="http://are.na/philo-van-kemenade/"
+          title="are.na"
+        >
+          <i class="v-mid" data-feather="bookmark"></i>
+          <span class="v-mid">are.na</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://vimeo.com/phivk"
+          title="vimeo"
+        >
+          <i class="v-mid" data-feather="youtube"></i>
+          <span class="v-mid">vimeo</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://www.linkedin.com/in/philovk/"
+          title="linkedin"
+        >
+          <i class="v-mid" data-feather="linkedin"></i>
+          <span class="v-mid">linkedin</span>
+        </a>
+      </footer>
+    </div>
+
+    <script>
+      feather.replace();
+    </script>
+    <script
+      data-goatcounter="https://phivk.goatcounter.com/count"
+      async
+      src="//gc.zgo.at/count.js"
+    ></script>
+  </body>
 </html>
