--- a/now/index.html
+++ b/now/index.html
@@ -1,87 +1,207 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>now · Philo van Kemenade</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
-  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-</head>
-<body class="sans-serif dark-gray bg-washed-green">
-  <div class="pa3 pa4-m pa6-l pb4-l">
-    <header class="f7">
-      <nav class="f6">
-        <a class="link dim dark-green dib mr3 mb3" href="/" title="home">
-          <i class="v-mid" data-feather="home"></i> <span class="v-mid">home</span>
+  <head>
+    <title>now · Philo van Kemenade</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+  </head>
+  <body class="sans-serif dark-gray bg-washed-green">
+    <div class="pa3 pa4-m pa6-l pb4-l">
+      <header class="f7">
+        <nav class="f6">
+          <a class="link dim dark-green dib mr3 mb3" href="/" title="home">
+            <i class="v-mid" data-feather="home"></i>
+            <span class="v-mid">home</span>
+          </a>
+          <a class="link dim dark-green dib mr3 mb3" href="/now" title="home">
+            <i class="v-mid" data-feather="sun"></i>
+            <span class="v-mid">now</span>
+          </a>
+        </nav>
+      </header>
+      <main class="dark-gray">
+        <h1 class="f1">What I'm doing now</h1>
+        <div class="measure-wide">
+          <ul class="list pa0 mb5">
+            <li class="mb3">
+              Researching and developing
+              <a
+                class="link dark-green hover-green underline"
+                href="https://www.beeldengeluid.nl/en/news/learn-all-about-generous-interfaces"
+                target="_blank"
+                >innovative interfaces for audiovisual collections</a
+              >
+              at the Netherlands Institute for Sound & Vision.
+            </li>
+            <li class="mb3">
+              Growing
+              <a
+                class="link dark-green hover-green underline"
+                href="https://storytellers.link/"
+                target="_blank"
+                >a friendly community of innovative storytellers with diversity
+                at its core</a
+              >.
+            </li>
+            <li class="mb3">
+              Building
+              <a
+                class="link dark-green hover-green underline"
+                href="https://gradu.al/"
+                target="_blank"
+                >tools for intentional community learning</a
+              >.
+            </li>
+            <li class="mb3">
+              Developing a course on photogrammetric 3D scanning, inspired by
+              the storyworld of
+              <a
+                class="link dark-green hover-green underline"
+                href="https://en.wikipedia.org/wiki/Flatland"
+                target="_blank"
+                >Flatland</a
+              >
+              by Edwin Abbott Abbott, as part of
+              <a
+                class="link dark-green hover-green underline"
+                href="https://hyperlink.academy/"
+                target="_blank"
+                >Hyperlink Academy</a
+              >'s Meta Course.
+            </li>
+            <li class="mb3">
+              Serving on the
+              <a
+                class="link dark-green hover-green underline"
+                href="https://pro.europeana.eu/project/ai-in-relation-to-glams"
+                target="_blank"
+                >EuropeanaTech AI for GLAMs Task Force</a
+              >.
+            </li>
+            <li class="mb3">
+              Co-curating the
+              <a
+                href="https://www.mozillafestival.org/en/uniquely-mozfest/spaces/#creative-ai"
+                target="_blank"
+                class="link dark-green hover-green underline"
+                >Creative AI Space at the 2021 edition of Mozilla Festival</a
+              >.
+            </li>
+            <li class="mb3">
+              Learning / practicing
+              <ul>
+                <li>drawing</li>
+                <li>speaking German</li>
+                <li>balancing my handstand</li>
+                <li>advanced Vue.js web development</li>
+              </ul>
+            </li>
+          </ul>
+          <p class="o-70 i">This page was last updated: January 2021.</p>
+          <p class="o-70 i">
+            This page is inspired by an idea by
+            <a
+              class="link dark-green hover-green underline"
+              href="https://sive.rs/now"
+              target="_blank"
+              >Derek Sivers</a
+            >. See
+            <a
+              class="link dark-green hover-green underline"
+              href="https://nownownow.com/about"
+              >nownownow.com/about</a
+            >
+            for more info.
+          </p>
+        </div>
+      </main>
+      <footer class="pt5 f7">
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://twitter.com/phivk"
+          title="twitter"
+        >
+          <i class="v-mid" data-feather="twitter"></i>
+          <span class="v-mid">twitter</span>
         </a>
-        <a class="link dim dark-green dib mr3 mb3" href="/now" title="home">
-          <i class="v-mid" data-feather="sun"></i> <span class="v-mid">now</span>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://c.im/@Phivk"
+          title="mastodon"
+        >
+          <i class="v-mid" data-feather="at-sign"></i>
+          <span class="v-mid">mastodon</span>
         </a>
-      </nav>
-    </header>
-    <main class="dark-gray">
-      <h1 class="f1">What I'm doing now</h1>
-      <div class="measure-wide">
-        <ul class="list pa0 mb5">
-          <li class="mb3">
-            Researching and developing <a class="link dark-green hover-green underline" href="https://www.beeldengeluid.nl/en/news/learn-all-about-generous-interfaces" target="_blank">innovative interfaces for audiovisual collections</a> at the Netherlands Institute for Sound & Vision.
-          </li>
-          <li class="mb3">
-            Growing <a class="link dark-green hover-green underline" href="https://storytellers.link/" target="_blank">a friendly community of innovative storytellers with diversity at its core</a>.
-          </li>
-          <li class="mb3">
-            Building <a class="link dark-green hover-green underline" href="https://gradu.al/" target="_blank">tools for intentional community learning</a>.
-          </li>
-          <li class="mb3">
-            Developing a course on photogrammetric 3D scanning, inspired by the storyworld of <a class="link dark-green hover-green underline" href="https://en.wikipedia.org/wiki/Flatland" target="_blank">Flatland</a> by Edwin Abbott Abbott, as part of <a class="link dark-green hover-green underline" href="https://hyperlink.academy/" target="_blank">Hyperlink Academy</a>'s Meta Course.
-          </li>
-          <li class="mb3">
-            Serving on the <a class="link dark-green hover-green underline" href="https://pro.europeana.eu/project/ai-in-relation-to-glams" target="_blank">EuropeanaTech AI for GLAMs Task Force</a>.
-          </li>
-          <li class="mb3">
-            Co-curating the <a href="https://www.mozillafestival.org/en/uniquely-mozfest/spaces/#creative-ai" target="_blank" class="link dark-green hover-green underline">Creative AI Space at the 2021 edition of Mozilla Festival</a>.
-          </li>
-          <li class="mb3">
-            Learning / practicing
-            <ul>
-              <li>drawing</li>
-              <li>speaking German</li>
-              <li>balancing my handstand</li>
-              <li>advanced Vue.js web development</li>
-            </ul>
-          </li>
-        </ul>
-        <p class="o-70 i">This page was last updated: January 2021.</p>
-        <p class="o-70 i">This page is inspired by an idea by <a class="link dark-green hover-green underline" href="https://sive.rs/now" target="_blank">Derek Sivers</a>. See <a class="link dark-green hover-green underline" href="https://nownownow.com/about">nownownow.com/about</a> for more info.</p>
-      </div>
-    </main>
-    <footer class="pt5 f7">
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://twitter.com/phivk" title="twitter">
-        <i class="v-mid" data-feather="twitter"></i> <span class="v-mid">twitter</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://github.com/phivk/" title="github">
-        <i class="v-mid" data-feather="github"></i> <span class="v-mid">github</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://medium.com/@phivk" title="medium">
-        <i class="v-mid" data-feather="edit"></i> <span class="v-mid">medium</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://slides.com/phivk/" title="slides">
-        <i class="v-mid" data-feather="image"></i> <span class="v-mid">slides</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="http://are.na/philo-van-kemenade/" title="are.na">
-        <i class="v-mid" data-feather="bookmark"></i> <span class="v-mid">are.na</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://vimeo.com/phivk" title="vimeo">
-        <i class="v-mid" data-feather="youtube"></i> <span class="v-mid">vimeo</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://www.linkedin.com/in/philovk/" title="linkedin">
-        <i class="v-mid" data-feather="linkedin"></i> <span class="v-mid">linkedin</span>
-      </a>
-    </footer>
-  </div>
-  
-  <script>
-    feather.replace()
-  </script>
-  <script data-goatcounter="https://phivk.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
-</body>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://github.com/phivk/"
+          title="github"
+        >
+          <i class="v-mid" data-feather="github"></i>
+          <span class="v-mid">github</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://medium.com/@phivk"
+          title="medium"
+        >
+          <i class="v-mid" data-feather="edit"></i>
+          <span class="v-mid">medium</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://slides.com/phivk/"
+          title="slides"
+        >
+          <i class="v-mid" data-feather="image"></i>
+          <span class="v-mid">slides</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="http://are.na/philo-van-kemenade/"
+          title="are.na"
+        >
+          <i class="v-mid" data-feather="bookmark"></i>
+          <span class="v-mid">are.na</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://vimeo.com/phivk"
+          title="vimeo"
+        >
+          <i class="v-mid" data-feather="youtube"></i>
+          <span class="v-mid">vimeo</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://www.linkedin.com/in/philovk/"
+          title="linkedin"
+        >
+          <i class="v-mid" data-feather="linkedin"></i>
+          <span class="v-mid">linkedin</span>
+        </a>
+      </footer>
+    </div>
+
+    <script>
+      feather.replace();
+    </script>
+    <script
+      data-goatcounter="https://phivk.goatcounter.com/count"
+      async
+      src="//gc.zgo.at/count.js"
+    ></script>
+  </body>
 </html>
